Update how item is removed when item is clipped to avoid scrollbar on clipped items

--- a/itemlayout/src/main/resources/org/vaadin/addon/itemlayout/widgetset/public/itemlayout.css
+++ b/itemlayout/src/main/resources/org/vaadin/addon/itemlayout/widgetset/public/itemlayout.css
@@ -57,17 +57,12 @@
 }
 
 /* Style for Vertical */
-.v-itemlayout-vertical {	
-	position: relative;
-}
 .v-itemlayout-vertical .v-itemlayout-scroll-visiblelist {
-	width: 100%;
 	position: absolute;
 }
 
 .v-itemlayout-vertical .v-itemlayout-scroll-visiblelist table {
 	width: 100%;
-	
 }
 .v-itemlayout-vertical .v-itemlayout-scroll-next {
 	position: absolute;
